--- a/src/main/resources/templates/client-information.html
+++ b/src/main/resources/templates/client-information.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<link th:href="@{/css/clientstylesheet.css}" rel="stylesheet" type="text/css">
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
 </head>
 <header>
-	<h1>Contact us</h1>
+	<h1>Client info</h1>
 </header>
 
 <div id="form">
@@ -30,7 +31,7 @@
 			<textarea id="message" name="message"></textarea>
 		</div>
 
-		<input type="submit" value="Send your message!" />
+		<input type="submit" value="proceder al pago" />
 	</form>
 </div>
 </html>
